Proyecto2_SistemasOperativos-main/Proyecto2_SistemasOperativos-main/Proyecto2_SistemasOperativos-main/src/main/java/javac_errors.txt
C:\Users\tomas\Downloads\Proyecto2_SO-main\Proyecto2_SistemasOperativos-main\Proyecto2_SistemasOperativos-main\Proyecto2_SistemasOperativos-main\src\main\java\com\mycompany\so_proyecto2\SO_Proyecto2.java:15: error: constructor ControladorSistema in class ControladorSistema cannot be applied to given types;
        ControladorSistema controlador = new ControladorSistema(Config.CAPACIDAD_DISCO_DEFECTO);
                                         ^
  required: no arguments
  found: int
  reason: actual and formal argument lists differ in length
C:\Users\tomas\Downloads\Proyecto2_SO-main\Proyecto2_SistemasOperativos-main\Proyecto2_SistemasOperativos-main\Proyecto2_SistemasOperativos-main\src\main\java\Controlador\ControladorSistema.java:43: error: cannot find symbol
        this.disco = new DiscoV(Config.TOTAL_BLOQUES_DISCO);
                                      ^
  symbol:   variable TOTAL_BLOQUES_DISCO
  location: class Config
C:\Users\tomas\Downloads\Proyecto2_SO-main\Proyecto2_SistemasOperativos-main\Proyecto2_SistemasOperativos-main\Proyecto2_SistemasOperativos-main\src\main\java\Controlador\ParserJSON.java:38: error: constructor Proceso in class Proceso cannot be applied to given types;
                    Proceso dummy = new Proceso(0, Config.OP_CREATE, nombre, tamano, "admin");
                                    ^
  required: String,String,String,String,int,int
  found: int,String,String,int,String
  reason: actual and formal argument lists differ in length
C:\Users\tomas\Downloads\Proyecto2_SO-main\Proyecto2_SistemasOperativos-main\Proyecto2_SistemasOperativos-main\Proyecto2_SistemasOperativos-main\src\main\java\Controlador\ParserJSON.java:39: error: ejecutarCrearProceso(Proceso) has private access in ControladorSistema
                    controlador.ejecutarCrearProceso(dummy);
                               ^
C:\Users\tomas\Downloads\Proyecto2_SO-main\Proyecto2_SistemasOperativos-main\Proyecto2_SistemasOperativos-main\Proyecto2_SistemasOperativos-main\src\main\java\Controlador\ParserJSON.java:54: error: cannot find symbol
                        controlador.encolarProceso(Config.OP_CREATE, name, size, user);
                                   ^
  symbol:   method encolarProceso(String,String,int,String)
  location: variable controlador of type ControladorSistema
C:\Users\tomas\Downloads\Proyecto2_SO-main\Proyecto2_SistemasOperativos-main\Proyecto2_SistemasOperativos-main\Proyecto2_SistemasOperativos-main\src\main\java\Controlador\ParserJSON.java:56: error: cannot find symbol
                        controlador.encolarProceso(Config.OP_DELETE, name, 0, user);
                                   ^
  symbol:   method encolarProceso(String,String,int,String)
  location: variable controlador of type ControladorSistema
C:\Users\tomas\Downloads\Proyecto2_SO-main\Proyecto2_SistemasOperativos-main\Proyecto2_SistemasOperativos-main\Proyecto2_SistemasOperativos-main\src\main\java\Controlador\ParserJSON.java:59: error: cannot find symbol
                        controlador.encolarProceso(Config.OP_UPDATE, name, size, user);
                                   ^
  symbol:   method encolarProceso(String,String,int,String)
  location: variable controlador of type ControladorSistema
C:\Users\tomas\Downloads\Proyecto2_SO-main\Proyecto2_SistemasOperativos-main\Proyecto2_SistemasOperativos-main\Proyecto2_SistemasOperativos-main\src\main\java\Controlador\ParserJSON.java:61: error: cannot find symbol
                        controlador.encolarProceso(Config.OP_READ, name, 0, user);
                                   ^
  symbol:   method encolarProceso(String,String,int,String)
  location: variable controlador of type ControladorSistema
C:\Users\tomas\Downloads\Proyecto2_SO-main\Proyecto2_SistemasOperativos-main\Proyecto2_SistemasOperativos-main\Proyecto2_SistemasOperativos-main\src\main\java\Vista\DashboardPrincipal.java:633: error: cannot find symbol
        areaJournal = new JTextArea();
        ^
  symbol:   variable areaJournal
  location: class DashboardPrincipal
C:\Users\tomas\Downloads\Proyecto2_SO-main\Proyecto2_SistemasOperativos-main\Proyecto2_SistemasOperativos-main\Proyecto2_SistemasOperativos-main\src\main\java\Vista\DashboardPrincipal.java:634: error: cannot find symbol
        areaJournal.setEditable(false);
        ^
  symbol:   variable areaJournal
  location: class DashboardPrincipal
C:\Users\tomas\Downloads\Proyecto2_SO-main\Proyecto2_SistemasOperativos-main\Proyecto2_SistemasOperativos-main\Proyecto2_SistemasOperativos-main\src\main\java\Vista\DashboardPrincipal.java:635: error: cannot find symbol
        areaJournal.setBackground(COLOR_FONDO_APP);
        ^
  symbol:   variable areaJournal
  location: class DashboardPrincipal
C:\Users\tomas\Downloads\Proyecto2_SO-main\Proyecto2_SistemasOperativos-main\Proyecto2_SistemasOperativos-main\Proyecto2_SistemasOperativos-main\src\main\java\Vista\DashboardPrincipal.java:636: error: cannot find symbol
        areaJournal.setForeground(COLOR_TEXTO);
        ^
  symbol:   variable areaJournal
  location: class DashboardPrincipal
C:\Users\tomas\Downloads\Proyecto2_SO-main\Proyecto2_SistemasOperativos-main\Proyecto2_SistemasOperativos-main\Proyecto2_SistemasOperativos-main\src\main\java\Vista\DashboardPrincipal.java:637: error: cannot find symbol
        areaJournal.setFont(FUENTE_BASE);
        ^
  symbol:   variable areaJournal
  location: class DashboardPrincipal
C:\Users\tomas\Downloads\Proyecto2_SO-main\Proyecto2_SistemasOperativos-main\Proyecto2_SistemasOperativos-main\Proyecto2_SistemasOperativos-main\src\main\java\Vista\DashboardPrincipal.java:638: error: cannot find symbol
        areaJournal.setText("Crear Archivo 'doc1': PENDIENTE\nCrear Directorio 'docs': CONFIRMADA\nEliminar 'dosS2': PENDIENTE\n");
        ^
  symbol:   variable areaJournal
  location: class DashboardPrincipal
C:\Users\tomas\Downloads\Proyecto2_SO-main\Proyecto2_SistemasOperativos-main\Proyecto2_SistemasOperativos-main\Proyecto2_SistemasOperativos-main\src\main\java\Vista\DashboardPrincipal.java:639: error: cannot find symbol
        JScrollPane scrollJournal = new JScrollPane(areaJournal);
                                                    ^
  symbol:   variable areaJournal
  location: class DashboardPrincipal
15 errors
